--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -132,10 +132,10 @@ body {
 .error-message {
   display: none;
   position: relative; 
-  background-color: #ffcccc;
-  color: #ff0000;
+  background-color: #7ea56a;
+  color: #ffffff;
   padding: 5px;
-  border: 1px solid #ff0000;
+  border: 1px solid #7ea56a;
   border-radius: 4px;
   top: -7rem; /* Coloca el mensaje encima del campo de entrada */ 
   margin-left: 0; 
@@ -303,6 +303,35 @@ body {
   .label-form {
       font-size: 16px;
   }
+}
+
+#success-message {
+  width: 20em;
+  height: 20em;
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  color: #7ea56a;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 9999;
+}
+
+#success-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+#success-box img {
+  max-width: 100px;
+  margin-bottom: 10px;
 }
 
 
