--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</head>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+   
+  </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #7ea56a;">
         <div class="container-fluid ">
@@ -48,21 +50,13 @@
                 </a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('caja')}}">
+                <a class="nav-link" href="{{url_for('agenda')}}">
                     Agenda
                 </a> 
               </li>
               
             </ul>
-            <div class="text-center">
-              {% if alerta %}
-                        <li class="nav-item">
-                            <a class="nav-link" style="color: red;">
-                                {{ alerta }}
-                            </a>
-                        </li>
-                    {% endif %}
-          </div>
+           
             <div class="text-center ">
                 <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>  
               </div>
