--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,7 +22,7 @@
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Apellido <span class="campo-obligatorio">*</span></label>
                                 <input type="text" class="form-control mb-3" name="apellido" id="apellido" required value="{{ form_data.apellido if form_data else '' }}">
-                                <div id="apellido-error" class="text-danger error-message"></div> 
+                                <div id="apellido-error" class="error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Email <span class="campo-obligatorio">*</span></label>
@@ -31,17 +31,17 @@
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Telefono <span class="campo-obligatorio">*</span></label>
                                 <input type="tel" class="form-control mb-3" name="telefono" id="telefono" pattern="[0-9]+"  required value="{{ form_data.telefono if form_data else '' }}">
-                                <div id="telefono-error" class="text-danger error-message"></div> 
+                                <div id="telefono-error" class=" error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Fecha de nacimiento <span class="campo-obligatorio">*</span></label>
                                 <input type="date" class="form-control mb-3" name="fecha_nacimiento" id="fecha_nacimiento" required value="{{ form_data.fecha_nacimiento if form_data else '' }}">
-                                <div id="fecha-nacimiento-error" class="text-danger error-message"></div> 
+                                <div id="fecha-nacimiento-error" class=" error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Fecha de inicio <span class="campo-obligatorio">*</span></label>
                                 <input type="date" class="form-control mb-3" name="fecha_inicio" id="fecha_inicio" required value="{{ form_data.fecha_inicio if form_data else '' }}">
-                                <div id="fecha-inicio-error" class="text-danger error-message"></div> 
+                                <div id="fecha-inicio-error" class=" error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Colegio <span class="campo-obligatorio">*</span></label>
@@ -80,12 +80,12 @@
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Nombre tutor <span class="campo-obligatorio">*</span></label>
                                 <input type="text" class="form-control mb-3" name="nombre_titular" id="nombre_titular" required value="{{ form_data.nombre_titular if form_data else '' }}">
-                                <div id="nombre-titular-error" class="text-danger error-message"></div> 
+                                <div id="nombre-titular-error" class=" error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                 <label  class="label-form">Telefono tutor <span class="campo-obligatorio">*</span></label>
                                 <input type="tel" class="form-control mb-3" name="telefono_titular"   id="telefono_titular" maxlength="10" required value="{{ form_data.telefono_titular if form_data else '' }}">
-                                <div id="telefono-titular-error" class="text-danger error-message"></div> 
+                                <div id="telefono-titular-error" class="error-message"></div> 
                             </div>
                             <div class="col-md-3 col-sm-12">
                                     Día <span class="campo-obligatorio">*</span>
@@ -188,9 +188,11 @@
                         </div>
                         {% endif %}
                         {% endwith %}
+                        
                         </form>
                     </div>
                 </div>
+                
                 <a href="/listado">Ver Listado</a>
 
                 
