--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <form action="{{ url_for('ingresos')}}" method="POST">
                         <div class="row mb-3">
-                            <div class="col-md-2 col-sm-12">
+                            <div class="col ">
                                 <label class="label-form label-with-arrow">
                                     Nombre <span class="campo-obligatorio">*</span>
                                     <div class="select-container">
@@ -27,12 +27,12 @@
                                     </div>
                                 </label>
                             </div>                            
-                            <div class="col-md-2 col-sm-12">
+                            <div class="col">
                                 <label class="label-form">Fecha de pago <span class="campo-obligatorio">*</span></label>
                                 <input type="date" class="form-control mb-3" name="fecha_pago" id="fecha_pago" required value="{{ form_data.fecha_pago if form_data else '' }}">
                                 <div id="fecha-pago-error" class="error-message"></div> 
                             </div>
-                            <div class="col-md-2 col-sm-12">
+                            <div class="col ">
                                 <label class="label-form">Monto <span class="campo-obligatorio">*</span></label>
                                 <input type="text" class="form-control " name="monto" placeholder="0.00" required value="{{ form_data.monto if form_data else '' }}" id="montoInput">
                             </div>
@@ -72,7 +72,7 @@
                                 });
                                 </script>
                                                                                                                    
-                            <div class="col-md-2 col-sm-12">
+                            <div class="col">
                                 <label class=" label-form label-with-arrow">
                                     Medios de pago <span class="campo-obligatorio">*</span>
                                     <div class="select-container">
@@ -87,7 +87,7 @@
                                     </div>
                                 </label>
                             </div>
-                            <div class="col-md-2 col-sm-12">
+                            <div class="col ">
                                 <label class=" label-form label-with-arrow">
                                     Tipo de pago <span class="campo-obligatorio">*</span>
                                     <div class="select-container">
@@ -137,6 +137,8 @@
                         </div>
                     </form>           
                 </div>
+
+                
                 <div class="row mb-3">
                     <div class="form-inline">
                         <input type="text" class="form-control" id="busquedaInput" placeholder="Buscar alumno">
