--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -76,9 +76,29 @@
         </div>     
 
     </div>
+    <div id="success-message" class="hidden">
+        <div id="success-box">
+            <img src="static/img/exito.svg" style="width: 10em;">  
+          Inicio de sesión exitoso
+        </div>
+      </div>
+      
+      
+      
 </body>
-</html>
-</body>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Mostrar el mensaje de inicio de sesión exitoso
+      const successMessage = document.getElementById("success-message");
+      successMessage.style.display = "block";
+  
+      // Ocultar el mensaje después de 5 segundos
+      setTimeout(function() {
+        successMessage.style.display = "none";
+      }, 2000); // 5000 milisegundos = 5 segundos
+    });
+  </script>
+  
 </html>
 
 
