--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -2,6 +2,7 @@
 {% block title %}Agenda{% endblock %}
 {% block content %}
 <head>
+
   <meta charset='utf-8' />
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.js'></script>
   <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.css' rel='stylesheet' />
@@ -64,7 +65,8 @@
       });
     });
   </script>
-  <style>
+
+ <style>
     body {
       margin: 40px 10px;
       padding: 0;
@@ -80,4 +82,8 @@
 </head>
 </html>
 
+{% endblock %}
+
+
+</body>
 {% endblock %}
